# omc_api

./: .env.example  BACKLOG.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  nginx.conf  pyproject.toml
app/: main.py
app/api/v1/endpoints/leads/: leads.py
app/database/: __init__.py  models.py  settings.py
app/schemes/: __init__.py  leads.py
app/services/: leads_service.py
migrations/: env.py
migrations/versions/: 001_initial_migration.py  002_add_updated_at.py  003_seed_leads.py
tests/: conftest.py  test_app.py  test_leads.py
