[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "aserrador",email = "alejandro.ayala0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "aio-pika>=9.6.2",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.2",
    "psycopg-binary>=3.3.3",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.setuptools.packages.find]
where = ["app"]
include = ["*"]
