[project]
name = "app"
version = "0.1.0"
description = "API for capture leads"
authors = [
    {name = "aserrador",email = "alejandro.ayala0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "aio-pika>=9.6.2",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.2",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.48",
    "uvicorn (>=0.42.0,<0.43.0)",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "taskipy>=0.1.0",
]

[tool.taskipy.tasks]
test = "pytest -v"
lint = "ruff check app/"
docker-up = "docker-compose up -d"
docker-down = "docker-compose down"
migrate-create = "alembic revision --autogenerate -m"
migrate-upgrade = "alembic upgrade head"
migrate-downgrade = "alembic downgrade -1"

[tool.setuptools.packages.find]
where = ["app"]
include = ["*"]
